# hotkey-server

./: .dockerignore  .env.development.example  .env.example  .env.prod.example  .env.production.example  .env.staging.example  .env.test  .gitignore  .symphony-claude-prompt.3A3Cb8  .symphony-claude-prompt.4VLAWe  .symphony-claude-prompt.Hsl9es  .symphony-claude-prompt.MhmdBQ  .symphony-claude-prompt.dhp4bZ  .symphony-claude-prompt.hQ8cR2  .symphony-claude-prompt.isoF8C  .symphony-claude-prompt.mOFYwl  .symphony-claude-prompt.slZanh  .symphony-claude-prompt.vd7SLt  .symphony-claude-prompt.xeVGiX  .symphony-claude-prompt.yNtKKE  .symphony-gemini-prompt.txt47X  AGENTS.local.md  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  README_EN.md  SECURITY.md  WORKFLOW.md  docker-compose.development.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  go.mod  (+7 more)
.githooks/: pre-commit
.github/: pull_request_template.md
.reboot-safety/: pre-cleanup-diff.patch  pre-cleanup-status.txt  pre-cleanup-untracked.txt
db/: README.md  assets.go  embed.go  queries.sql  schema.sql  schema_smoke_test.sh
deploy/: nginx.conf
docs/: README.md  TEMPLATE.md  cross-repo-client-generation.md  docs.go  enterprise-p0-backlog-gap-review.md  openapi.json  openapi.yaml  swagger.json  swagger.yaml  验收差距清单.md
migrations/: 000001_init.up.sql  000002_users.up.sql  000003_channels_subscriptions.down.sql  000003_channels_subscriptions.up.sql  000004_sources.down.sql  (+47 more)
(+2227 files in other folders)
