[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hotspot-radar"
version = "0.1.0"
description = "Self-hosted AI hotspot monitoring MVP"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[tool.fastapi]
entrypoint = "server.app.main:app"

[tool.setuptools.packages.find]
include = ["server*", "packages*"]
